# ema_nlp

./: .gitignore  .mcp.json  BACKLOG.md  CLAUDE.md  CLAUDE_GUIDANCE.md  DECISIONS.md  HARNESS_REFACTORS.md  OPEN_QUESTIONS.md  PLAN_citations_export_sme_review.md  README.md  app.py  chainlit.md  config.py  ema_nlp_review.md  idmp_dabbling.py  pyproject.toml  run_ui.sh
.chainlit/: config.toml
.claude/: HISTORY.md  settings.json
.claude/work/: ACTIVE_WORK
.files/3e4e4bea-7e1a-4ad4-9da2-41617d79f0c8/: 3a609019-02fc-47b0-acd6-0ccde1d16fb7.txt  433998dd-2856-48c0-a0d6-accb765559f1.txt  7335138a-730b-4f24-b946-337ddb6a3aa8.txt  ef1af5de-ea32-481a-b4f6-498519d1104e.txt  f337548e-3dc1-4763-b12c-8871e45849ac.txt
ablations/A_evidence_filter/: acronym_dict.yaml
ablations/B_process_rewards/: SANITY_CHECK.md  b1_trajectories.jsonl  label_rubric.md  run_b1_sanity.py
benchmark/: SCHEMA.md  STATS.md  benchmark.jsonl  showcase.jsonl  validate_benchmark.py
benchmark/candidates/: t1_candidates.jsonl  t2_authored.md  t3_chain_map.md
corpus/: SCHEMA.md  build_corpus.py  corpus_stats.md  models.py  pg_schema.sql
corpus/extractors/: html_extractor.py  pdf_extractor.py
corpus/ingestion/: chunker.py  html_normaliser.py  link_extractor.py  pdf_normaliser.py
corpus/metadata/: __init__.py  text_metadata.py  url_metadata.py
corpus/parsers/: __init__.py  base.py  llamahub_pdf.py  pymupdf4llm.py  trafilatura.py
corpus/sources/: __init__.py  mongo_source.py  parsed_documents.py  synthetic_legacy_reader.py
deploy/mongo/: README.md  docker-compose.yml
deploy/neo4j/: README.md  docker-compose.yml  inspect_queries.cypher  neodash_dashboard.json
deploy/postgres/: README.md  docker-compose.yml
docs/: AGENTIC_GUIDE.md  ARCHITECTURE.md  CITATIONS.md  ONBOARDING.md  RAG_TECHNIQUES.md  RECIPES.md  REQUIREMENTS_REVIEW.md  RETRIEVAL.md  RETRIEVAL_PG.md  RETRIEVAL_PIPELINE.md  RETRIEVAL_TRACKS.md  RUNTIME_VERIFICATION.md  SETUP.md  TARGET_ARCHITECTURE.md  VISUALIZATION.md  WORKFLOWS.md  contamination_sentences.tsv  training_data_verification.md
docs/eval/: 2026-07-13_topic_subgraphs.md  2026-07-20_tree_seeding.md
docs/examples/: 01_source_categories.ipynb  02_steered_retrieval.ipynb  03_routing_and_full_agent.ipynb  04_topic_subgraphs_eval.ipynb  README.md
docs/next/: README.md  closed_book_lift.md  graphrag_vs_mcp_benchmark.md  metadata_steering.md  retrieval_miss_detection.md  topic_subgraphs.md  topic_subgraphs_followups.md  tree_retrieval_followups.md
docs/tools/: README.md  chain_events.md  corrective_search.md  ema_search.md  resolve_substance.md  retriever.md  site_tree.md  topic_context.md
ema_nlp.egg-info.rootowned.bak/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
harness/: answer_gen.py  attribution.py  compute_lift.py  config_paths.py  contamination_screen.py  embed.py  embed_hierarchical.py  embed_pg.py  eval_retrieval.py  export_traces.py  fewshot_inject.py  judge.py  label_session.py  langsmith_dataset.py  llms.py  models.py  providers.py  query_cache.py  rating.py  retrieve.py  retrieve_pg.py  run_eval.py  run_langsmith_eval.py
harness/ablations/: a1_query_expansion.py  a2_topic_filter.py  a3_reranker.py  a4_reranker.py
harness/agents/: __init__.py  config.py  react_agent.py  registry.py  regulatory.py  runner.py  session.py  workflow_adapter.py
harness/chains/: __init__.py  evaluators.py  llms.py  pipeline.py  pipeline_state.py  registry.py  retriever.py  simple_rag.py
harness/configs/: ablation_a_a1.yaml  ablation_a_a2_concept.yaml  ablation_a_a2_keyword.yaml  ablation_a_a3.yaml  ablation_a_a4.yaml  ablation_a_a5.yaml  ablation_c_frontier_cot.yaml  ablation_c_frontier_few.yaml  ablation_c_frontier_zero.yaml  ablation_c_mid_cot.yaml  ablation_c_mid_few.yaml  ablation_c_mid_zero.yaml  ablation_c_olmo_cot.yaml  ablation_c_olmo_few.yaml  ablation_c_olmo_zero.yaml  baseline_a0.yaml  baseline_a0plus.yaml  diag_react_opus.yaml  example_chmp_only.yaml  models.yaml  parser_preference.yaml  retrieval_recursive.yaml  workflow_crag.yaml  workflow_crag_review.yaml  workflow_react.yaml  workflow_simple_rag.yaml
harness/eval/: __init__.py  bootstrap.py  evaluate.py  inline_judge.py  judges.py  predict.py  runner.py
project_roadmap/: ABLATIONS.md  BLOG_OUTLINE.md  CLAUDE_CODE_SETUP.md  GLOSSARY.md  LEAKAGE.md  README_OUTLINE.md  ROADMAP.md
scripts/: backfill_doc_badges.py  backfill_doc_categories.py  backfill_doc_types.py  backfill_parsed_documents_subset.py  backfill_site_tree.py  build_graph_map.py  contamination_check.py  create_github_issues.py  create_github_issues.sh  enrich_document_metadata.py  fetch_mini_corpus.py  generate_comparison_report.py  generate_phase0_notebook.py  ingest_parsed_pdfs.py  init_db.py  inspect_graph.py  manage_topic_hubs.py  migrate_mongo_to_parsed_documents.py  phase0_inventory.csv  phase0_inventory.py  phase0_scope_decision.ipynb  phase0_topic_report.md  phase0_topic_report.py  propagate_metadata_to_graph.py  render_trace.py  resolve_links.py  run_agent_demo.py  run_eval.py  seed_neodash.py  setup.sh  start_services.sh  sync_github_issues.py  sync_mongo.sh  sync_pg.sh  tag_concepts.py  test_ingest_resume.py  update_graph.py
tests/: conftest.py  test_ablations.py  test_agent_runner.py  test_agent_session.py  test_agent_workflow_adapter.py  test_agents.py  test_artifact_store.py  test_attribution.py  test_badges.py  test_build_corpus.py  test_chain_from_trace.py  test_chat_settings.py  test_chunker.py  test_doc_categories.py  test_doc_types.py  test_document_metadata.py  test_embed.py  test_embed_pg_sync.py  test_embed_pg_sync_pure.py  test_eval_bootstrap.py  test_eval_judges.py  test_eval_predict.py  test_eval_retrieval.py  test_eval_runner.py  test_export.py  test_export_chain.py  test_fewshot_inject.py  test_graph_map.py  test_hitl_export.py  test_html_extractor.py  test_html_normaliser.py  test_indexing_chunking.py  test_indexing_ingest.py  test_indexing_links.py  test_indexing_open.py  test_indexing_profiles.py  test_indexing_property_graph.py  test_indexing_subgraphs.py  test_inline_judge.py  test_langchain_chains.py  (+47 more)
(+397 files in other folders)
