[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ema-nlp"
version = "0.1.0"
description = "EMA Q&A RAG Benchmark — corpus, benchmark, and evaluation harness"
requires-python = ">=3.11"
dependencies = [
    # Data extraction
    "pymupdf4llm>=1.27.2",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    # Database
    "pymongo>=4.17",
    # RAG framework — LlamaIndex core + backends
    "llama-index-core>=0.12",
    "llama-index-embeddings-huggingface>=0.4",   # wraps sentence-transformers
    "llama-index-vector-stores-faiss>=0.3",       # wraps faiss-cpu
    "llama-index-retrievers-bm25>=0.5",           # wraps rank-bm25
    "llama-index-llms-anthropic>=0.6",            # Claude LLM integration
    # Retrieval backends (used by LlamaIndex)
    "rank-bm25>=0.2.2",
    "faiss-cpu>=1.13",
    "sentence-transformers>=5.4",
    # Observability — model-agnostic tracing
    "arize-phoenix>=4.0",
    "openinference-instrumentation-llama-index>=2.0",
    # LLM
    "anthropic>=0.100",
    # Utilities
    "PyYAML>=6.0",
    "matplotlib>=3.9",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=5.0",
    "ruff>=0.15",
    "mypy>=2.0",
    "types-PyYAML",
    "nbformat>=5.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert is fine in tests

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["corpus*", "benchmark*", "harness*"]
