[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ema-nlp"
version = "0.1.0"
description = "EMA Q&A RAG Benchmark — corpus, benchmark, and evaluation harness"
requires-python = ">=3.11"
dependencies = [
    # Data extraction
    "pymupdf4llm>=1.27.2",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "trafilatura>=1.12",
    # Database
    "pymongo>=4.17",
    "psycopg[binary]>=3.2",
    "psycopg_pool>=3.2",
    "pgvector>=0.3",
    # RAG framework — LlamaIndex core + backends
    "llama-index-core>=0.12",
    "llama-index-embeddings-huggingface>=0.4",   # wraps sentence-transformers
    "llama-index-vector-stores-faiss>=0.3",       # wraps faiss-cpu
    "llama-index-retrievers-bm25>=0.5",           # wraps rank-bm25
    "llama-index-llms-anthropic>=0.6",            # Claude LLM integration
    "llama-index-llms-openai>=0.7",              # OpenAI-compatible LLMs (Together AI / OLMo)
    "llama-index-graph-stores-neo4j>=0.4",       # Neo4j PropertyGraphStore (LlamaIndex-first refactor)
    # Retrieval backends (used by LlamaIndex)
    "rank-bm25>=0.2.2",
    "faiss-cpu>=1.13",
    "sentence-transformers>=5.4",
    # Observability — model-agnostic tracing
    "arize-phoenix>=4.0",
    "openinference-instrumentation-llama-index>=2.0",
    "mlflow>=3.0",                                # MLflow tracking + eval/judges (target architecture)
    # LLM
    "anthropic>=0.100",
    # Utilities
    "PyYAML>=6.0",
    "matplotlib>=3.9",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
ui = [
    "chainlit>=2.11,<3",
    "openinference-instrumentation-anthropic>=0.1",
    "aiosqlite>=0.20",
]
parsers-llamahub = [
    # Demo parser for the parser-swap workflow (MIGR-014).
    "llama-index-readers-file>=0.4",
]
dev = [
    "pytest>=9.0",
    "pytest-cov>=5.0",
    "ruff>=0.15",
    "mypy>=2.0",
    "types-PyYAML",
    "nbformat>=5.10",
    "mongomock>=4.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert is fine in tests

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: requires live external services (MongoDB, network)",
]

[tool.setuptools]
# config.py is a top-level module imported as `from config import ...` across the
# codebase (harness.indexing.property_graph, etc.). Declare it so the editable
# install exposes it everywhere — otherwise it only resolves when the repo root
# happens to be on sys.path (works under pytest / `python` from root, but NOT
# under `chainlit run app.py`, which loads the app without repo root on the path).
py-modules = ["config"]

[tool.setuptools.packages.find]
where = ["."]
include = ["corpus*", "benchmark*", "harness*"]
