[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ema-nlp"
version = "0.1.0"
description = "EMA Q&A RAG Benchmark — corpus, benchmark, and evaluation harness"
requires-python = ">=3.11"
dependencies = [
    # Data extraction
    "pymupdf4llm>=1.27.2",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "trafilatura>=1.12",
    # Database
    "pymongo>=4.17",
    # NOTE: the Postgres/pgvector stack (psycopg, psycopg_pool, pgvector) was removed
    # in the LlamaIndex/Neo4j retrieval refactor (LIR-012) — nothing imports it anymore.
    # Neo4j is reached through llama-index-graph-stores-neo4j (below).
    # RAG framework — LlamaIndex core + backends
    "llama-index-core>=0.12",
    "llama-index-embeddings-huggingface>=0.4",   # wraps sentence-transformers
    "llama-index-llms-anthropic>=0.6",            # Claude LLM integration
    "llama-index-llms-openai>=0.7",              # OpenAI-compatible LLMs (Together AI / OLMo)
    "llama-index-graph-stores-neo4j>=0.4",       # Neo4j PropertyGraphStore (LlamaIndex-first refactor)
    # Retrieval backends (used by LlamaIndex)
    "faiss-cpu>=1.13",                            # semantic query cache (harness/query_cache.py)
    "sentence-transformers>=5.4",
    # Observability — MLflow tracing + run-recording + eval/judges (replaced Arize Phoenix)
    "mlflow>=3.0",
    # LLM
    "anthropic>=0.100",
    # Utilities
    "PyYAML>=6.0",
    "matplotlib>=3.9",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
ui = [
    "chainlit>=2.11,<3",
    "aiosqlite>=0.20",
]
parsers-llamahub = [
    # Demo parser for the parser-swap workflow (MIGR-014).
    "llama-index-readers-file>=0.4",
]
viz = [
    # Offline layout for scripts/build_graph_map.py (not a runtime dep).
    "python-igraph>=0.11",
]
dev = [
    "pytest>=9.0",
    "pytest-cov>=5.0",
    "ruff>=0.15",
    "mypy>=2.0",
    "types-PyYAML",
    "nbformat>=5.10",
    "mongomock>=4.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert is fine in tests

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: requires live external services (MongoDB, network)",
]

[tool.setuptools]
# config.py is a top-level module imported as `from config import ...` across the
# codebase (harness.indexing.property_graph, etc.). Declare it so the editable
# install exposes it everywhere — otherwise it only resolves when the repo root
# happens to be on sys.path (works under pytest / `python` from root, but NOT
# under `chainlit run app.py`, which loads the app without repo root on the path).
py-modules = ["config"]

[tool.setuptools.packages.find]
where = ["."]
include = ["corpus*", "benchmark*", "harness*"]
